--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Template • TodoMVC</title>
+		<title>App Tareas v1.0.0</title>
 	</head>
 	<body>
 		<section class="todoapp">
@@ -63,10 +63,11 @@
 		</section>
 		<footer class="info">
 
+			<p>Elaborado por: Luis Ramos</p>
+			<p>Para la capacitacón de Metrica Movil - 20/08/20</p>
 			<p>Template creado por <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
 			<!-- Change this out with your name and url ↓ -->
-			<p>Creado por <a href="http://todomvc.com">ti</a></p>
-			<p>Parte de <a href="http://todomvc.com">TodoMVC</a></p>
+			<p>Creditos: Prof. Fernando Herrera (Curso de JavaScript - Udemy) <a href="https://www.udemy.com/course/javascript-fernando-herrera/">ti</a></p>
 		</footer>
         
         
